--- a/docs/Npm/6.md
+++ b/docs/Npm/6.md
@@ -1,4 +1,4 @@
-## 【Npm报错】ERR! gyp: No Xcode or CLT version detected!
+# 【Npm报错】ERR! gyp: No Xcode or CLT version detected!
 
 gyp错误通常与缺少构建工具相关，比如在Mac上缺少Xcode或Command Line Tools。
 
